# hypothesis-talk

./: README.md  pyproject.toml
hypothesis_talk/: __main__.py  adder.py
tests/: test_adder.py
