[tool.poetry]
name = "hypothesis-talk"
version = "0.1.0"
description = ""
authors = ["Matthew Raspberry <3092450+mraspberry@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hypothesis_talk"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.70.0"
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jfrog"
url = "https://ramseysolutions.jfrog.io/artifactory/api/pypi/pypi/simple"
default = true

[tool.poetry.scripts]
add-nums = 'hypothesis_talk.__main__:main'
